fixing major by yunpnzr, benerin anchornya aja sih

--- a/kuliner.html
+++ b/kuliner.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wisata</title>
+    <title>Kuliner</title>
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <!--CSS-->
-    <link rel="stylesheet" href="css/wisata.css">
+    <link rel="stylesheet" href="css/kuliner.css">
     <!--font awesome-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
@@ -30,9 +30,9 @@
                 <li><a href="index.html" class="link-navigation-1">Home</a></li>
                 <li><a href="sejarah.html" class="link-navigation-1">Sejarah</a></li>
                 <li><a href="budaya.html" class="link-navigation-1">Budaya</a></li>
-                <li><a href="wisata.html" class="link-navigation-1-aktif">Wisata</a></li>
+                <li><a href="wisata.html" class="link-navigation-1">Wisata</a></li>
                 <li><a href="rute.html" class="link-navigation-1">Rute</a></li>
-                <li><a href="kuliner.html" class="link-navigation-1">Kuliner</a></li>
+                <li><a href="kuliner.html" class="link-navigation-1-aktif">Kuliner</a></li>
             </ul>
         </div>
     </div>
@@ -43,14 +43,7 @@
     <!--container-->
     <div class="container-1">
         <div class="judul-1">
-            <h1 class="judul">WISATA JAKARTA</h1>
-        </div>
-
-        <!--Button Pemesanan-->
-        <div class="button-ticket">
-            <a href="form_daftar.html">
-                <input type="button" value="Pesan Tiket" name="pesanTiket" id="pesanTiket">
-            </a>
+            <h1 class="judul">KULINER JAKARTA</h1>
         </div>
 
         <!--Content All-->
@@ -59,100 +52,103 @@
             <hr>
             <div class="content-wisata">
                 <div class="picture-content-wisata">
-                    <a href="artikel_wisata.html">
-                        <img src="pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                    <a href="artikel_kuliner.html">
+                        <img src="pict/kerak_telor.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
                     <div class="tagg">
                         <div class="tag-1">
-                            <p>Wisata</p>
+                            <p>Kuliner</p>
                         </div>
                         <div class="tag-2">
-                            <p>Kota Tua</p>
+                            <p>Kerak Telor</p>
                         </div>
                     </div>
                     <div class="judul-content">
-                        <a href="artikel_wisata.html">
-                            <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                        <a href="artikel_kuliner.html">
+                            <h2>Gurih dan Legitnya Kerak Telor, Makanan Khas Jakarta
+                            </h2>
                         </a>
                     </div>
                     <div class="creator-content-wisata">
                         <p>Penulis : yunpnzr</p>
                     </div>
                     <div class="text-content-main">
-                        <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                        <p>Walaupun kini banyak fast food yang hadir di Jakarta, kerak telor tetap mempunyai tempat di hati warga Jakarta. Jakarta Selain tempat wisata, Jakarta juga memiliki makanan yang yang menjadi ciri khas dari daerah Jakarta. Salah satu makanan yang khas adalah kerak telor yang begitu identik dengan kota Jakarta. <a href="#">Read more...</a></p>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                        <p>Sumber : #</p>
                     </div>
                 </div>
             </div>
 
             <!--Content 2-->
             <hr>
-                <div class="content-wisata">
-                    <div class="picture-content-wisata">
-                        <a href="artikel_wisata.html">
-                            <img src="pict/Fatahillah.jpg" alt="fatahillah" srcset="">
-                        </a>
-                    </div>
-                    <div class="text-content-wisata">
-                        <div class="tagg">
-                            <div class="tag-1">
-                                <p>Wisata</p>
-                            </div>
-                            <div class="tag-2">
-                                <p>Kota Tua</p>
-                            </div>
-                        </div>
-                        <div class="judul-content">
-                            <a href="artikel_wisata.html">
-                                <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
-                            </a>
-                        </div>
-                        <div class="creator-content-wisata">
-                            <p>Penulis : yunpnzr</p>
-                        </div>
-                        <div class="text-content-main">
-                            <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
-                        </div>
-                        <div class="creator-content-wisata">
-                            <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
-                        </div>
-                    </div>
-                </div>
-
-            <!--Content 3-->
-            <hr>
             <div class="content-wisata">
                 <div class="picture-content-wisata">
-                    <a href="artikel_wisata.html">
-                        <img src="pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                    <a href="artikel_kuliner.html">
+                        <img src="pict/kerak_telor.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
                     <div class="tagg">
                         <div class="tag-1">
-                            <p>Wisata</p>
+                            <p>Kuliner</p>
                         </div>
                         <div class="tag-2">
-                            <p>Kota Tua</p>
+                            <p>Kerak Telor</p>
                         </div>
                     </div>
                     <div class="judul-content">
-                        <a href="artikel_wisata.html">
-                            <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                        <a href="artikel_kuliner.html">
+                            <h2>Gurih dan Legitnya Kerak Telor, Makanan Khas Jakarta
+                            </h2>
                         </a>
                     </div>
                     <div class="creator-content-wisata">
                         <p>Penulis : yunpnzr</p>
                     </div>
                     <div class="text-content-main">
-                        <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                        <p>Walaupun kini banyak fast food yang hadir di Jakarta, kerak telor tetap mempunyai tempat di hati warga Jakarta. Jakarta Selain tempat wisata, Jakarta juga memiliki makanan yang yang menjadi ciri khas dari daerah Jakarta. Salah satu makanan yang khas adalah kerak telor yang begitu identik dengan kota Jakarta. <a href="#">Read more...</a></p>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                        <p>Sumber : #</p>
+                    </div>
+                </div>
+            </div>
+
+            <!--Content 3-->
+            <hr>
+            <div class="content-wisata">
+                <div class="picture-content-wisata">
+                    <a href="artikel_kuliner.html">
+                        <img src="pict/kerak_telor.jpg" alt="fatahillah" srcset="">
+                    </a>
+                </div>
+                <div class="text-content-wisata">
+                    <div class="tagg">
+                        <div class="tag-1">
+                            <p>Kuliner</p>
+                        </div>
+                        <div class="tag-2">
+                            <p>Kerak Telor</p>
+                        </div>
+                    </div>
+                    <div class="judul-content">
+                        <a href="artikel_kuliner.html">
+                            <h2>Gurih dan Legitnya Kerak Telor, Makanan Khas Jakarta
+                            </h2>
+                        </a>
+                    </div>
+                    <div class="creator-content-wisata">
+                        <p>Penulis : yunpnzr</p>
+                    </div>
+                    <div class="text-content-main">
+                        <p>Walaupun kini banyak fast food yang hadir di Jakarta, kerak telor tetap mempunyai tempat di hati warga Jakarta. Jakarta Selain tempat wisata, Jakarta juga memiliki makanan yang yang menjadi ciri khas dari daerah Jakarta. Salah satu makanan yang khas adalah kerak telor yang begitu identik dengan kota Jakarta. <a href="#">Read more...</a></p>
+                    </div>
+                    <div class="creator-content-wisata">
+                        <p>Sumber : #</p>
                     </div>
                 </div>
             </div>
@@ -161,34 +157,33 @@
             <hr>
             <div class="content-wisata">
                 <div class="picture-content-wisata">
-                    <a href="artikel_wisata.html">
-                        <img src="pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                    <a href="artikel_kuliner.html">
+                        <img src="pict/kerak_telor.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
                     <div class="tagg">
                         <div class="tag-1">
-                            <p>Wisata</p>
+                            <p>Kuliner</p>
                         </div>
                         <div class="tag-2">
-                            <p>Kota Tua</p>
+                            <p>Kerak Telor</p>
                         </div>
                     </div>
                     <div class="judul-content">
-                        <a href="artikel_wisata.html">
-                            <a href="artikel_wisata.html">
-                                <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
-                            </a>
+                        <a href="artikel_kuliner.html">
+                            <h2>Gurih dan Legitnya Kerak Telor, Makanan Khas Jakarta
+                            </h2>
                         </a>
                     </div>
                     <div class="creator-content-wisata">
                         <p>Penulis : yunpnzr</p>
                     </div>
                     <div class="text-content-main">
-                        <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                        <p>Walaupun kini banyak fast food yang hadir di Jakarta, kerak telor tetap mempunyai tempat di hati warga Jakarta. Jakarta Selain tempat wisata, Jakarta juga memiliki makanan yang yang menjadi ciri khas dari daerah Jakarta. Salah satu makanan yang khas adalah kerak telor yang begitu identik dengan kota Jakarta. <a href="#">Read more...</a></p>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                        <p>Sumber : #</p>
                     </div>
                 </div>
             </div>
@@ -197,32 +192,33 @@
             <hr>
             <div class="content-wisata">
                 <div class="picture-content-wisata">
-                    <a href="artikel_wisata.html">
-                        <img src="pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                    <a href="artikel_kuliner.html">
+                        <img src="pict/kerak_telor.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
                     <div class="tagg">
                         <div class="tag-1">
-                            <p>Wisata</p>
+                            <p>Kuliner</p>
                         </div>
                         <div class="tag-2">
-                            <p>Kota Tua</p>
+                            <p>Kerak Telor</p>
                         </div>
                     </div>
                     <div class="judul-content">
-                        <a href="artikel_wisata.html">
-                            <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                        <a href="artikel_kuliner.html">
+                            <h2>Gurih dan Legitnya Kerak Telor, Makanan Khas Jakarta
+                            </h2>
                         </a>
                     </div>
                     <div class="creator-content-wisata">
                         <p>Penulis : yunpnzr</p>
                     </div>
                     <div class="text-content-main">
-                        <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                        <p>Walaupun kini banyak fast food yang hadir di Jakarta, kerak telor tetap mempunyai tempat di hati warga Jakarta. Jakarta Selain tempat wisata, Jakarta juga memiliki makanan yang yang menjadi ciri khas dari daerah Jakarta. Salah satu makanan yang khas adalah kerak telor yang begitu identik dengan kota Jakarta. <a href="#">Read more...</a></p>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                        <p>Sumber : #</p>
                     </div>
                 </div>
             </div>
@@ -231,32 +227,33 @@
             <hr>
             <div class="content-wisata">
                 <div class="picture-content-wisata">
-                    <a href="artikel_wisata.html">
-                        <img src="pict/Fatahillah.jpg" alt="fatahillah" srcset="">
+                    <a href="artikel_kuliner.html">
+                        <img src="pict/kerak_telor.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
                     <div class="tagg">
                         <div class="tag-1">
-                            <p>Wisata</p>
+                            <p>Kuliner</p>
                         </div>
                         <div class="tag-2">
-                            <p>Kota Tua</p>
+                            <p>Kerak Telor</p>
                         </div>
                     </div>
                     <div class="judul-content">
-                        <a href="artikel_wisata.html">
-                            <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                        <a href="artikel_kuliner.html">
+                            <h2>Gurih dan Legitnya Kerak Telor, Makanan Khas Jakarta
+                            </h2>
                         </a>
                     </div>
                     <div class="creator-content-wisata">
                         <p>Penulis : yunpnzr</p>
                     </div>
                     <div class="text-content-main">
-                        <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                        <p>Walaupun kini banyak fast food yang hadir di Jakarta, kerak telor tetap mempunyai tempat di hati warga Jakarta. Jakarta Selain tempat wisata, Jakarta juga memiliki makanan yang yang menjadi ciri khas dari daerah Jakarta. Salah satu makanan yang khas adalah kerak telor yang begitu identik dengan kota Jakarta. <a href="#">Read more...</a></p>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                        <p>Sumber : #</p>
                     </div>
                 </div>
             </div>
