--- a/sejarah.html
+++ b/sejarah.html
@@ -8,7 +8,7 @@
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <!--CSS-->
-    <link rel="stylesheet" href="../project_web_dasar/css/sejarah.css">
+    <link rel="stylesheet" href="css/sejarah.css">
     <!--font awesome-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
@@ -53,7 +53,7 @@
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_sejarah.html">
-                        <img src="../project_web_dasar/pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
@@ -62,66 +62,32 @@
                             <p>Sejarah</p>
                         </div>
                         <div class="tag-2">
-                            <p>Kota Tua</p>
+                            <p>Jakarta</p>
                         </div>
                     </div>
                     <div class="judul-content">
                         <a href="artikel_sejarah.html">
-                            <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                            <h2>Sejarah Ibukota Jakarta</h2>
                         </a>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Penulis : yunpnzr</p>
+                        <p>Penulis : ar42</p>
                     </div>
                     <div class="text-content-main">
-                        <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                        <p>Jakarta pertama kali dikenal sebagai salah satu pelabuhan Kerajaan Sunda yang bernama Sunda Kalapa, berlokasi di muara Sungai Ciliwung. Ibu kota Kerajaan Sunda yang dikenal sebagai Dayeuh Pakuan Padjadjaran atau Pajajaran (sekarang Bogor) dapat ditempuh dari pelabuhan Sunda Kalapa selama dua hari perjalanan.  <a href="#">Read more...</a></p>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                        <p>Sumber : #</p>
                     </div>
                 </div>
             </div>
 
             <!--Content 2-->
             <hr>
-                <div class="content-wisata">
-                    <div class="picture-content-wisata">
-                        <a href="artikel_sejarah.html">
-                            <img src="../project_web_dasar/pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
-                        </a>
-                    </div>
-                    <div class="text-content-wisata">
-                        <div class="tagg">
-                            <div class="tag-1">
-                                <p>Sejarah</p>
-                            </div>
-                            <div class="tag-2">
-                                <p>Kota Tua</p>
-                            </div>
-                        </div>
-                        <div class="judul-content">
-                            <a href="artikel_sejarah.html">
-                                <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
-                            </a>
-                        </div>
-                        <div class="creator-content-wisata">
-                            <p>Penulis : yunpnzr</p>
-                        </div>
-                        <div class="text-content-main">
-                            <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
-                        </div>
-                        <div class="creator-content-wisata">
-                            <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
-                        </div>
-                    </div>
-                </div>
-
-            <!--Content 3-->
-            <hr>
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_sejarah.html">
-                        <img src="../project_web_dasar/pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
@@ -130,22 +96,56 @@
                             <p>Sejarah</p>
                         </div>
                         <div class="tag-2">
-                            <p>Kota Tua</p>
+                            <p>Jakarta</p>
                         </div>
                     </div>
                     <div class="judul-content">
                         <a href="artikel_sejarah.html">
-                            <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                            <h2>Sejarah Ibukota Jakarta</h2>
                         </a>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Penulis : yunpnzr</p>
+                        <p>Penulis : ar42</p>
                     </div>
                     <div class="text-content-main">
-                        <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                        <p>Jakarta pertama kali dikenal sebagai salah satu pelabuhan Kerajaan Sunda yang bernama Sunda Kalapa, berlokasi di muara Sungai Ciliwung. Ibu kota Kerajaan Sunda yang dikenal sebagai Dayeuh Pakuan Padjadjaran atau Pajajaran (sekarang Bogor) dapat ditempuh dari pelabuhan Sunda Kalapa selama dua hari perjalanan.  <a href="#">Read more...</a></p>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                        <p>Sumber : #</p>
+                    </div>
+                </div>
+            </div>
+
+            <!--Content 3-->
+            <hr>
+            <div class="content-wisata">
+                <div class="picture-content-wisata">
+                    <a href="artikel_sejarah.html">
+                        <img src="pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
+                    </a>
+                </div>
+                <div class="text-content-wisata">
+                    <div class="tagg">
+                        <div class="tag-1">
+                            <p>Sejarah</p>
+                        </div>
+                        <div class="tag-2">
+                            <p>Jakarta</p>
+                        </div>
+                    </div>
+                    <div class="judul-content">
+                        <a href="artikel_sejarah.html">
+                            <h2>Sejarah Ibukota Jakarta</h2>
+                        </a>
+                    </div>
+                    <div class="creator-content-wisata">
+                        <p>Penulis : ar42</p>
+                    </div>
+                    <div class="text-content-main">
+                        <p>Jakarta pertama kali dikenal sebagai salah satu pelabuhan Kerajaan Sunda yang bernama Sunda Kalapa, berlokasi di muara Sungai Ciliwung. Ibu kota Kerajaan Sunda yang dikenal sebagai Dayeuh Pakuan Padjadjaran atau Pajajaran (sekarang Bogor) dapat ditempuh dari pelabuhan Sunda Kalapa selama dua hari perjalanan.  <a href="#">Read more...</a></p>
+                    </div>
+                    <div class="creator-content-wisata">
+                        <p>Sumber : #</p>
                     </div>
                 </div>
             </div>
@@ -155,7 +155,7 @@
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_sejarah.html">
-                        <img src="../project_web_dasar/pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
@@ -164,22 +164,22 @@
                             <p>Sejarah</p>
                         </div>
                         <div class="tag-2">
-                            <p>Kota Tua</p>
+                            <p>Jakarta</p>
                         </div>
                     </div>
                     <div class="judul-content">
                         <a href="artikel_sejarah.html">
-                            <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                            <h2>Sejarah Ibukota Jakarta</h2>
                         </a>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Penulis : yunpnzr</p>
+                        <p>Penulis : ar42</p>
                     </div>
                     <div class="text-content-main">
-                        <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                        <p>Jakarta pertama kali dikenal sebagai salah satu pelabuhan Kerajaan Sunda yang bernama Sunda Kalapa, berlokasi di muara Sungai Ciliwung. Ibu kota Kerajaan Sunda yang dikenal sebagai Dayeuh Pakuan Padjadjaran atau Pajajaran (sekarang Bogor) dapat ditempuh dari pelabuhan Sunda Kalapa selama dua hari perjalanan.  <a href="#">Read more...</a></p>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                        <p>Sumber : #</p>
                     </div>
                 </div>
             </div>
@@ -189,7 +189,7 @@
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_sejarah.html">
-                        <img src="../project_web_dasar/pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
@@ -198,22 +198,22 @@
                             <p>Sejarah</p>
                         </div>
                         <div class="tag-2">
-                            <p>Kota Tua</p>
+                            <p>Jakarta</p>
                         </div>
                     </div>
                     <div class="judul-content">
                         <a href="artikel_sejarah.html">
-                            <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                            <h2>Sejarah Ibukota Jakarta</h2>
                         </a>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Penulis : yunpnzr</p>
+                        <p>Penulis : ar42</p>
                     </div>
                     <div class="text-content-main">
-                        <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                        <p>Jakarta pertama kali dikenal sebagai salah satu pelabuhan Kerajaan Sunda yang bernama Sunda Kalapa, berlokasi di muara Sungai Ciliwung. Ibu kota Kerajaan Sunda yang dikenal sebagai Dayeuh Pakuan Padjadjaran atau Pajajaran (sekarang Bogor) dapat ditempuh dari pelabuhan Sunda Kalapa selama dua hari perjalanan.  <a href="#">Read more...</a></p>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                        <p>Sumber : #</p>
                     </div>
                 </div>
             </div>
@@ -223,7 +223,7 @@
             <div class="content-wisata">
                 <div class="picture-content-wisata">
                     <a href="artikel_sejarah.html">
-                        <img src="../project_web_dasar/pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
+                        <img src="pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
                 <div class="text-content-wisata">
@@ -232,22 +232,22 @@
                             <p>Sejarah</p>
                         </div>
                         <div class="tag-2">
-                            <p>Kota Tua</p>
+                            <p>Jakarta</p>
                         </div>
                     </div>
                     <div class="judul-content">
                         <a href="artikel_sejarah.html">
-                            <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                            <h2>Sejarah Ibukota Jakarta</h2>
                         </a>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Penulis : yunpnzr</p>
+                        <p>Penulis : ar42</p>
                     </div>
                     <div class="text-content-main">
-                        <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                        <p>Jakarta pertama kali dikenal sebagai salah satu pelabuhan Kerajaan Sunda yang bernama Sunda Kalapa, berlokasi di muara Sungai Ciliwung. Ibu kota Kerajaan Sunda yang dikenal sebagai Dayeuh Pakuan Padjadjaran atau Pajajaran (sekarang Bogor) dapat ditempuh dari pelabuhan Sunda Kalapa selama dua hari perjalanan.  <a href="#">Read more...</a></p>
                     </div>
                     <div class="creator-content-wisata">
-                        <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                        <p>Sumber : #</p>
                     </div>
                 </div>
             </div>
