--- a/artikel_budaya.html
+++ b/artikel_budaya.html
@@ -8,7 +8,7 @@
      <!--Bootstrap-->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
      <!--CSS-->
-     <link rel="stylesheet" href="../project_web_dasar/css/artikel_budaya.css">
+     <link rel="stylesheet" href="css/artikel_budaya.css">
      <!--font awesome-->
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
@@ -28,7 +28,7 @@
         <div class="navigation-menu-1">
             <ul>
                 <li><a href="index.html" class="link-navigation-1">Home</a></li>
-                <li><a href="artikel_sejarah.html" class="link-navigation-1">Sejarah</a></li>
+                <li><a href="sejarah.html" class="link-navigation-1">Sejarah</a></li>
                 <li><a href="budaya.html" class="link-navigation-1">Budaya</a></li>
                 <li><a href="wisata.html" class="link-navigation-1-wisata">Wisata</a></li>
                 <li><a href="rute.html" class="link-navigation-1">Rute</a></li>
@@ -64,7 +64,7 @@
                     <div class="content-budaya">
                         <div class="picture-content-budaya">
                             <a href="artikel_budaya.html">
-                                <img src="../coba/pict/ondel-ondel.jpg" alt="" srcset="">
+                                <img src="pict/ondel-ondel.jpg" alt="" srcset="">
                             </a>
                         </div>
                         <div class="text-content-budaya">
@@ -90,7 +90,7 @@
                     <div class="content-budaya">
                         <div class="picture-content-budaya">
                             <a href="artikel_budaya.html">
-                                <img src="../coba/pict/ondel-ondel.jpg" alt="" srcset="">
+                                <img src="pict/ondel-ondel.jpg" alt="" srcset="">
                             </a>
                         </div>
                         <div class="text-content-budaya">
@@ -116,7 +116,7 @@
                     <div class="content-budaya">
                         <div class="picture-content-budaya">
                             <a href="artikel_budaya.html">
-                                <img src="../coba/pict/ondel-ondel.jpg" alt="" srcset="">
+                                <img src="pict/ondel-ondel.jpg" alt="" srcset="">
                             </a>
                         </div>
                         <div class="text-content-budaya">
@@ -142,7 +142,7 @@
                     <div class="content-budaya">
                         <div class="picture-content-budaya">
                             <a href="artikel_budaya.html">
-                                <img src="../coba/pict/ondel-ondel.jpg" alt="" srcset="">
+                                <img src="pict/ondel-ondel.jpg" alt="" srcset="">
                             </a>
                         </div>
                         <div class="text-content-budaya">
@@ -168,7 +168,7 @@
                     <div class="content-budaya">
                         <div class="picture-content-budaya">
                             <a href="artikel_budaya.html">
-                                <img src="../coba/pict/ondel-ondel.jpg" alt="" srcset="">
+                                <img src="pict/ondel-ondel.jpg" alt="" srcset="">
                             </a>
                         </div>
                         <div class="text-content-budaya">
