--- a/budaya.html
+++ b/budaya.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     
     <!--CSS-->
-    <link rel="stylesheet" href="../project_web_dasar/css/budaya.css">
+    <link rel="stylesheet" href="css/budaya.css">
     
     <!--font awesome-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -33,7 +33,7 @@
             <ul>
                 <li><a href="index.html" class="link-navigation-1">Home</a></li>
                 <li><a href="sejarah.html" class="link-navigation-1">Sejarah</a></li>
-                <li><a href="budaya.html" class="link-navigation-1">Budaya</a></li>
+                <li><a href="budaya.html" class="link-navigation-1-aktif">Budaya</a></li>
                 <li><a href="wisata.html" class="link-navigation-1">Wisata</a></li>
                 <li><a href="rute.html" class="link-navigation-1">Rute</a></li>
                 <li><a href="kuliner.html" class="link-navigation-1">Kuliner</a></li>
@@ -57,7 +57,7 @@
             <div class="content-budaya">
                 <div class="picture-content-budaya">
                     <a href="artikel_budaya.html">
-                        <img src="../project_web_dasar/pict/ondel-ondel.jpg" alt="" srcset="">
+                        <img src="pict/ondel-ondel.jpg" alt="" srcset="">
                     </a>
                 </div>
                     <div class="text-content-budaya">
@@ -89,7 +89,7 @@
             <div class="content-budaya">
                 <div class="picture-content-budaya">
                     <a href="artikel_budaya.html">
-                        <img src="../project_web_dasar/pict/ondel-ondel.jpg" alt="" srcset="">
+                        <img src="pict/ondel-ondel.jpg" alt="" srcset="">
                     </a>
                 </div>
                     <div class="text-content-budaya">
@@ -121,7 +121,7 @@
             <div class="content-budaya">
                 <div class="picture-content-budaya">
                     <a href="artikel_budaya.html">
-                        <img src="../project_web_dasar/pict/ondel-ondel.jpg" alt="" srcset="">
+                        <img src="pict/ondel-ondel.jpg" alt="" srcset="">
                     </a>
                 </div>
                     <div class="text-content-budaya">
@@ -153,7 +153,7 @@
             <div class="content-budaya">
                 <div class="picture-content-budaya">
                     <a href="artikel_budaya.html">
-                        <img src="../project_web_dasar/pict/ondel-ondel.jpg" alt="" srcset="">
+                        <img src="pict/ondel-ondel.jpg" alt="" srcset="">
                     </a>
                 </div>
                     <div class="text-content-budaya">
