--- a/rute.html
+++ b/rute.html
@@ -8,7 +8,7 @@
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <!--CSS-->
-    <link rel="stylesheet" href="../project_web_dasar/css/rute.css">
+    <link rel="stylesheet" href="css/rute.css">
     <!--font awesome-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
@@ -64,9 +64,7 @@
                 </a>
                 <a target="_blank" href="">
                     <li class="rute-icon">
-                        <a target="_blank" href="">
-                            <img class="gambar" src="pict/lrt.png" alt="LRT">
-                        </a>
+                        <img class="gambar" src="pict/lrt.png" alt="LRT">
                     </li>
                 </a>
             </ul>
